2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- (connection_settings_changed_cb, applet_dbus_connection_settings_new):
			ensure 'id' is updated
		- (applet_dbus_connection_settings_get_connection): new function

	* src/applet.c
		- (nm_utils_same_ssid, match_cipher, security_compatible,
		   nm_ap_check_compatible): gross C&P from NM to find compatible connection
		- (nma_menu_item_activate): find an existing connection to activate
			if we can
		- (nma_add_networks_helper, get_vpn_connections): warning fixes

2007-09-20  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/nm-connection-editor.c: Use defined setting names.

	* src/connection-editor/nm-connection-list.c (nm_connection_list_finalize):
	Don't leak GConfClient.
	(load_connections): No need to use weak references, just use 
	(g_object_set_data_full).

	* src/gconf-helpers/gconf-helpers.c (property_value_destroy): Implement.
	(add_property): Implement.
	(read_one_setting_value_from_gconf): Use variable names that actually exist.
	(nm_gconf_read_connection): Ditto.

	* src/applet.c (nma_menu_item_activate): s/devtype/type/.
	(nma_menu_vpn_item_clicked): Use the new VPN activation API.
	(get_vpn_connections): Implement it. AppletDbusConnectionSettings is _SO_
	painful to work with.
	(nma_menu_add_vpn_submenu): Don't use deprecated vpn-connection-info anymore.

	* src/applet-dbus-settings.c (applet_dbus_settings_list_connections): Implement.
	(copy_one_setting_value_to_gconf): Fix some typos. Handle NM_S_TYPE_GVALUE_HASH.

	* src/gconf-helpers/gconf-helpers.c (nm_gconf_get_valuehash_helper): Implement.
	(nm_gconf_set_valuehash_helper): Implement.
	(read_one_setting_value_from_gconf): Handle NM_S_TYPE_GVALUE_HASH.
	(nm_gconf_read_connection): Read VPN data.

2007-09-20  Dan Williams <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
		- Remove PPP tab
		- Change SSID to a text field for now
