@@ -1,6 +1,12 @@
 2007-09-20  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dbus-settings.c
+		- (applet_dbus_connection_settings_get_secrets): make asynchronous to
+			match libnm-glib API change
+
+2007-09-20  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dbus-settings.c
 	  src/applet-dbus-settings.h
 		- (connection_settings_changed_cb, applet_dbus_connection_settings_new):
 			ensure 'id' is updated
